# rust1.0.1

./: .eslintrc.js  .gitignore  ADDRESS_CONFIG_GUIDE.md  ADDRESS_CONFIG_SUMMARY.md  AI_CODE_DETECTION_REPORT.md  AI_CODE_DETECTION_SUMMARY.md  AI_CONFIG_MANAGEMENT.md  AI_EXECUTIVE_SUMMARY.md  AI_FUNCTIONALITY_REPORT.md  AI_FUNCTION_CODE_ANALYSIS_REPORT.md  AI_INTEGRATION_SUMMARY.md  API_DOCUMENTATION.md  BACKEND_FRONTEND_GENERATION_SUMMARY.md  BACKEND_OPTIMIZATION_REPORT.md  BUILD_STATUS.md  CLIENT_BUILD_GUIDE.md  CLIENT_BUILD_STATUS.md  CLIENT_BUILD_SUMMARY.md  CODE_QUALITY_GUIDE.md  COMPILATION_REPORT.md  COMPREHENSIVE_CODE_ERROR_REPORT.md  COMPREHENSIVE_CODE_QUALITY_REPORT.md  CUSTOM_AI_PROCESSOR_GUIDE.md  Cargo.toml  DATABASE_CONFIG.md  DEPLOYMENT_PACKAGE_GUIDE.md  DEPLOYMENT_STATUS_REPORT.md  DIRECTORY_UPDATE_SUMMARY.md  DUAL_BACKEND_API_INTEGRATION_PLAN.md  Dockerfile.production  ENTERPRISE_BUILD_REPORT.md  ENTERPRISE_FUNCTIONALITY_REPORT.md  ERROR_FIXES_SUMMARY.md  ERROR_IMPACT_ANALYSIS_REPORT.md  FINAL_CLEANUP_REPORT.md  FINAL_COMPILATION_REPORT.md  FINAL_FUNCTION_AVAILABILITY_SUMMARY.md  FRONTEND_BACKEND_CONSISTENCY_CHECK.md  FRONTEND_BACKEND_CONSISTENCY_FIX_REPORT.md  FRONTEND_COMMENTS_SUMMARY.md  (+70 more)
backup_modules/: ai.rs  kefu_assignment.rs  react_template.rs
backup_modules/ai/: config.rs  intent_recognition.rs  mod.rs  react_component_generator.rs  speech_recognition.rs
config/: address_config.toml  ai_config.toml  app-config-documentation.md  app-config.development.json  app-config.json  app-config.production.json  default.toml  environment.example  message_system.toml  nginx.conf.example  redis_pool.toml  secrets.env  users.json
data/: snap.000000000000D2FF  users.json
data/sled_db/: db  snap.0000000000000152  snap.0000000003AAB7AB
docs/: MOBILE_OPTIMIZATION.md  REACT_CARD_UPGRADE_GUIDE.md  README.md  README_DOCS.md  backend-api-latest.html  demo.html  documentation-hub.html  frontend-integration-guide.html  index.html  manifest.json  mobile-test.html  sw.js
docs/api/: authentication.html  index.html
docs/deployment/: index.html
docs/pages/: api.html  architecture.html  deployment.html  development.html  modules.html  troubleshooting.html
docs/reports/: API_TEST_REPORT.json  COMPREHENSIVE_API_TEST_REPORT.md  FRONTEND_BACKEND_CONSISTENCY_REPORT.md  PROJECT_REPORT.md  WEBSOCKET_TEST_REPORT.json
docs/technical/: index.html
docs/user-guide/: index.html
enhanced-backend/ai-service/: Cargo.toml
enhanced-backend/ai-service/src/: api_gateway.rs  main.rs
enhanced-backend/ai-service/src/services/: ai_service.rs
enhanced-backend/analytics-service/: Cargo.toml  Dockerfile
enhanced-backend/analytics-service/src/: api_gateway.rs  main.rs
enhanced-backend/analytics-service/src/services/: analytics_service.rs
enhanced-backend/enterprise-service/: Cargo.toml  Dockerfile
enhanced-backend/react-card-service/: Cargo.toml  Dockerfile
enhanced-backend/react-card-service/src/: api_gateway.rs  main.rs
enhanced-backend/react-card-service/src/services/: mod.rs  react_card_service.rs
enhanced-backend/react-card-service/templates/: base.html  custom_card.html  info_card.html  product_card.html
enterprise-react-app/: .eslintrc.json  .gitignore  .lintstagedrc.json  ARCHITECTURE.md  README.md  package-lock.json  package.json
enterprise-react-app/src/: App.tsx
examples/: address_config_example.rs  react_card_template_example.json
frontend/: .gitignore  ENTERPRISE_COMPONENTS_SUMMARY.md  REACT_ISSUES_SUMMARY.md  REACT_PROJECT_ANALYSIS_REPORT.md  README.md  build-components.sh  build.sh  fix-react-issues.js
frontend/kefu-app/: .eslintrc.js  COMPONENTS_README.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  REACT_CARD_SYSTEM_DOCUMENTATION.md  REACT_CARD_UPGRADE_REPORT.md  check.js  eslint.config.js  jest.config.js  package-lock.json  package.json  performance-report.json  tailwind.config.js  vite.config.js
frontend/kehu-app/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/shared-components/: README.md  package.json  rollup.config.js  tsconfig.json
monitoring/: prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: kefu.conf
reports/: code_quality_summary.md  compilation_report.txt  duplicate_code_report.txt  improvement_suggestions.txt  statistics_report.txt  unimplemented_features_report.txt  unused_code_report.txt
scripts/: code_cleanup_tool.sh  code_quality_analyzer.sh  deploy.sh  migrate_address_config.rs  monitor_build.sh  optimize_database.sql
src/: ai.rs  api_docs.rs  api_gateway.rs  compression.rs  config.rs  failover_manager.rs  file_manager.rs  file_manager_ext.rs  health_monitor.rs  html_template_manager.rs  http_fallback.rs  index.ts  lib.rs  load_balancer.rs  main.rs  message.rs  message_queue.rs  performance_optimizer.rs  react_template_manager.rs  redis_client.rs  redis_pool.rs  storage.rs  swagger.rs  type_generator.rs  user_manager.rs  voice_message.rs  websocket.rs  websocket_pool.rs
src_backup_20250721_164026/: ai.rs  api_routes.rs  auto_upgrade.rs  file_manager.rs  html_template_manager.rs  message.rs  message_enhanced.rs  message_processor.rs  message_queue.rs  redis_client.rs  storage.rs  user_manager.rs  voice_message.rs  websocket.rs  websocket_backup.rs
static/: index.html
tests/: README.md
(+417 files in other folders)
